--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "razorpay": "^2.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.22.3",
-    "sweetalert2": "^11.11.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
